<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ปฏิทินปักขคณนา</string>
    <string name="app_about">ปักขคณนา หรือ ปักษคณนา เป็นปฏิทินจันทรคติไทยประเภทหนึ่ง ซึ่งใช้วิธีการคำนวณหาวันขึ้นแรมให้แม่นยำตรงตามการโคจรของดวงจันทร์เป็นสำคัญ โดยไม่ได้นับวันตามการขึ้นตกของดวงอาทิตย์ แต่ใช้วิธีการนับโดยการยึดหาวันเพ็ญ และ วันดับ แทน สำหรับการคำนวณวันที่จะใช้กระดานปักขคณนา ในการช่วยคำนวณ ซึ่งจะซับซ้อนกว่าการนับปกติ สำหรับระบบปฏิทินจันทรคติแบบปักขคณนานี้ พระบาทสมเด็จพระจอมเกล้าเจ้าอยู่หัว ทรงค้นคิดวิธีคำนวณขึ้นใช้ในพระสงฆ์คณะธรรมยุติ เพื่อใช้ในการทำศาสนกิจต่อไป</string>
    <string name="app_title_dedicate">วัสถุประสงค์ของโปรแกรม</string>
    <string name="app_dedicate">ใช้เป็นปฏิทินในการลงอุโบสถสำหรับคณะสงฆ์ เพื่อดำรงซึ่งหลักธรรมคำสอนแห่งองค์พระสมเด็จสัมมาสัมพุทธเจ้า</string>
    <string name="app_title_link">แหล่งข้อมูลอ้างอิง</string>
    <string name="app_link1">http://th.wikipedia.org/wiki/ปฏิทินปักขคณนา</string>
    <string name="app_link2">http://www.ปฏิทินปักขคณนา.com</string>
    <string name="version_label">เวอร์ชั่น</string>
    <string name="version">Dhammayut Calendar v 1.0.0.0 beta</string>
</resources>